[package]
name = "git_sync"
version = "0.1.0"
authors = ["Daniel Silverstone (WSL2) <dsilvers@digital-scurf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.3", features=["full"]}
structopt = "0.3"